@@ -8,12 +8,8 @@ env:
       - GIT_CI_USER: TravisCI
       - GIT_CI_EMAIL: TravisCI@mdanalysis.org
       - MDA_DOCDIR: build/sphinx/html
-      - CONDA_MIN_DEPENDENCIES="numpy pytest pytest-cov sphinx"
-      - CONDA_DEPENDENCIES="${CONDA_MIN_DEPENDENCIES} scipy"
+      - CONDA_DEPENDENCIES="numpy scipy pytest pytest-cov sphinx"
       - PIP_DEPENDENCIES="codecov sphinx-sitemap"
-   matrix:
-   - SETUP=full
-   - SETUP=minimal
 python:
   - "3.6"
   - "3.5"
@@ -26,8 +22,7 @@ before_install:
   - export PATH=/home/travis/miniconda/bin:$PATH
   - conda update --yes conda
 install:
-  - if [[ $SETUP == 'full' ]]; then conda create --yes -q -n pyenv python=$TRAVIS_PYTHON_VERSION $CONDA_DEPENDENCIES; fi
-  - if [[ $SETUP == 'minimal' ]]; then conda create --yes -q -n pyenv python=$TRAVIS_PYTHON_VERSION $CONDA_MIN_DEPENDENCIES; fi
+  - conda create --yes -q -n pyenv python=$TRAVIS_PYTHON_VERSION $CONDA_DEPENDENCIES
   - source activate pyenv
   - pip install ${PIP_DEPENDENCIES}
   - pip install -v ./
